// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmployerBenefits when the claim contains employer benefits data renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Other leave, benefits, and income"
>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": true,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint={
      <React.Fragment>
        <LeaveDatesAlert
          endDate="2021-06-01"
          startDate="2021-01-01"
        />
        <p>
          Employer-sponsored benefits you must report are:
        </p>
        <ul
          className="usa-list"
        >
          <li>
            Accrued paid leave, such as vacation time, sick time, personal time, or other paid time off
          </li>
          <li>
            Short-term disability insurance
          </li>
          <li>
            Permanent disability insurance
          </li>
          <li>
            Family or medical leave insurance, such as a maternity leave policy
          </li>
        </ul>
      </React.Fragment>
    }
    label="Will you use any employer-sponsored benefits during your leave dates for paid leave?"
    name="has_employer_benefits"
    onChange={[Function]}
    type="radio"
    value={true}
  />
</QuestionPage>
`;

exports[`EmployerBenefits when the claim does not contain employer benefits data renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Other leave, benefits, and income"
>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint={
      <React.Fragment>
        <LeaveDatesAlert
          endDate="2021-06-01"
          startDate="2021-01-01"
        />
        <p>
          Employer-sponsored benefits you must report are:
        </p>
        <ul
          className="usa-list"
        >
          <li>
            Accrued paid leave, such as vacation time, sick time, personal time, or other paid time off
          </li>
          <li>
            Short-term disability insurance
          </li>
          <li>
            Permanent disability insurance
          </li>
          <li>
            Family or medical leave insurance, such as a maternity leave policy
          </li>
        </ul>
      </React.Fragment>
    }
    label="Will you use any employer-sponsored benefits during your leave dates for paid leave?"
    name="has_employer_benefits"
    onChange={[Function]}
    type="radio"
    value=""
  />
</QuestionPage>
`;
